--- a/community-guidelines/index.html
+++ b/community-guidelines/index.html
@@ -3,226 +3,260 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#0a3a21">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <title>Community Guidelines | Uberspinners</title>
-  <meta name="description" content="Review the Uberspinners community guidelines. We prioritise safety, respect, and a harassment-free social casino experience.">
-  <meta property="og:site_name" content="Uberspinners">
-  <meta property="og:title" content="Community Guidelines | Uberspinners">
-  <meta property="og:description" content="Review the Uberspinners community guidelines and safety principles.">
+  <meta name="theme-color" content="#f8cf5d">
+  <title>Community Guidelines | FortunePlay Fun</title>
+  <meta name="description" content="Read the FortunePlay Fun community code, built on respect, safety, and a zero-harassment stance.">
+  <link rel="canonical" href="https://fortuneplay.fun/community-guidelines/">
+  <meta property="og:site_name" content="FortunePlay Fun">
+  <meta property="og:title" content="Community Guidelines | FortunePlay Fun">
+  <meta property="og:description" content="Learn how we keep the FortunePlay lounge respectful and inclusive.">
+  <meta property="og:url" content="https://fortuneplay.fun/community-guidelines/">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://uberspinners.com/community-guidelines/">
-  <meta property="og:image" content="https://uberspinners.com/public/images/uberspinners-hero.svg">
+  <meta property="og:image" content="https://fortuneplay.fun/public/images/shareimage.webp">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Community Guidelines | Uberspinners">
-  <meta name="twitter:description" content="Review the Uberspinners community guidelines and safety principles.">
-  <meta name="twitter:image" content="https://uberspinners.com/public/images/uberspinners-hero.svg">
-  <link rel="canonical" href="https://uberspinners.com/community-guidelines/">
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
-  <link rel="stylesheet" href="/styles.css?v=2">
+  <meta name="twitter:title" content="Community Guidelines | FortunePlay Fun">
+  <meta name="twitter:description" content="Respect is the jackpot. Review the rules that keep FortunePlay safe.">
+  <meta name="twitter:image" content="https://fortuneplay.fun/public/images/shareimage.webp">
+
+  <link rel="icon" href="/favicon.ico" sizes="any">
+  <link rel="stylesheet" href="/styles.css?v=3">
 </head>
 <body>
   <a class="skip-link" href="#main-content">Skip to main content</a>
   <header class="site-header">
-    <div class="container header-inner">
-      <a class="brand" href="/">
-        <span class="brand-icon" aria-hidden="true">
-          <img src="/public/images/uberspinners-icon.svg" alt="" role="presentation">
-        </span>
-        <span class="brand-text">
-          <img src="/public/images/uberspinners-wordmark.svg" alt="Uberspinners">
-        </span>
+    <div class="shell header__inner">
+
+      <a class="brand" href="/" aria-label="FortunePlay Fun home">
+                <div class='brand__logo' role='img' aria-label='FortunePlay Fun textured logo'>
+          <span aria-hidden='true'>fortuneplay.fun</span>
+        </div>
       </a>
+
       <nav class="site-nav" aria-label="Primary">
-        <a href="/" class="nav-link">Home</a>
-<a href="/leaderboard/" class="nav-link">Leaderboard</a>
-        <a href="/daily-bonus/" class="nav-link">Daily Bonus</a>
-        <a href="/frames/" class="nav-link">Frames</a>
-        <a href="/responsible-play/" class="nav-link">Responsible Play</a>
-        <a href="/contact/" class="nav-link">Contact</a>
+        <a href="/">Home</a>
+        <a href="/community/">Community</a>
+        <a href="/responsible-play/">Responsible Play</a>
+        <a href="/contact/">Contact</a>
       </nav>
     </div>
   </header>
 
+
+
   <main id="main-content">
-    <section class="surface">
-      <div class="container page-intro">
-        <h1>Community Guidelines</h1>
-        <p class="lead">
-          Uberspinners thrives on respectful, inclusive interactions. These guidelines explain the behaviour we expect,
-          the conduct we will not tolerate, and how we respond to reports.
-        </p>
-      </div>
-    </section>
 
-    <section class="container page-body">
-      <section>
-        <h2>Our community values</h2>
-        <p>
-          We built the lounge for relaxation, artistry, and camaraderie. By participating you agree to treat fellow guests
-          with dignity, respect the moderation team, and keep conversations welcoming to everyone.
-        </p>
-        <p class="muted">
-          We maintain zero tolerance for behaviour that harasses, threatens, or harms others. Violations can lead to warnings,
-          suspensions, or permanent account termination.
-        </p>
-      </section>
+    <section class="hero hero--sub">
 
-      <section>
-        <h2>Strictly prohibited behaviour</h2>
-        <div class="danger-grid">
-          <article class="danger-card">
-            <h3>Harassment &amp; abuse</h3>
-            <ul>
-              <li>Threatening, bullying, or intimidating anyone.</li>
-              <li>Sending unwanted romantic or sexual messages.</li>
-              <li>Stalking, repeated messaging after being asked to stop.</li>
-              <li>Doxxing-sharing private information without consent.</li>
-            </ul>
-          </article>
-          <article class="danger-card">
-            <h3>Hate speech &amp; discrimination</h3>
-            <ul>
-              <li>Any slurs or insults targeting protected characteristics.</li>
-              <li>Propagating hateful ideologies or symbols.</li>
-              <li>Encouraging exclusion or segregation of community members.</li>
-            </ul>
-          </article>
-          <article class="danger-card">
-            <h3>Inappropriate content</h3>
-            <ul>
-              <li>Sexually explicit imagery or pornography.</li>
-              <li>Graphic depictions of violence or gore.</li>
-              <li>Content that glorifies self-harm or suicide.</li>
-              <li>Illegal material or discussions encouraging unlawful acts.</li>
-            </ul>
-          </article>
-          <article class="danger-card">
-            <h3>Cheating &amp; exploitation</h3>
-            <ul>
-              <li>Using bots, scripts, or automation to play games.</li>
-              <li>Attempting to manipulate leaderboards or XP gains.</li>
-              <li>Advertising external gambling, phishing, or scams.</li>
-              <li>Selling or trading accounts, frames, or currency.</li>
-            </ul>
-          </article>
+      <div class="shell hero__grid">
+
+        <div>
+
+          <p class="pill">Community</p>
+
+          <h1>FortunePlay Fun community standards.</h1>
+
+          <p>Every guest enters the lounge with the same promise: a calm, creative space free from harassment and pressure. These guidelines spell out the behavior we uplift and the lines we hold.</p>
+
         </div>
-      </section>
 
-      <section class="callout">
-        <h2>Reporting a problem</h2>
-        <ol class="ordered-list">
-          <li>Collect screenshots or chat logs that document what happened.</li>
-          <li>Email <a href="mailto:support@uberspinners.com">support@uberspinners.com</a> with the username, date, and description.</li>
-          <li>Our moderation team reviews reports daily and responds with next steps.</li>
-        </ol>
-        <p class="muted">
-          Filing false reports to harm other members is itself a guideline violation.
-        </p>
-      </section>
+        <div class="hero__card">
 
-      <section>
-        <h2>Moderation actions</h2>
-        <ul class="checklist">
-          <li><strong>Warning:</strong> For minor first-time issues.</li>
-          <li><strong>Temporary suspension:</strong> From 24 hours up to 30 days depending on severity.</li>
-          <li><strong>Permanent ban:</strong> For serious or repeated violations.</li>
-          <li><strong>Legal escalation:</strong> If we observe illegal activity or credible threats.</li>
-        </ul>
-      </section>
+          <h3>Need to report?</h3>
 
-      <section>
-        <h2>Appeals</h2>
-        <p>
-          Believe we made a mistake? Send an appeal to <a href="mailto:legal@uberspinners.com">legal@uberspinners.com</a> within 14 days and include:
-        </p>
-        <ul class="checklist">
-          <li>Your lounge username and registered email address.</li>
-          <li>The date the action occurred and any reference numbers we provided.</li>
-          <li>A concise explanation of why you believe the decision was incorrect.</li>
-        </ul>
-        <p class="muted">
-          Appeals are reviewed within seven business days. All appeal decisions are final.
-        </p>
-      </section>
+          <p>Email <a href="mailto:support@fortuneplay.fun">support@fortuneplay.fun</a> with the username, room, and timestamp. We reply within one business day.</p>
 
-      <section>
-        <h2>Guideline updates</h2>
-        <p>
-          We periodically refine these guidelines to reflect new features and community feedback. We announce major changes in the lounge and via email.
-          Continued use after an update counts as acceptance of the revised policies.
-        </p>
-      </section>
+          <p>Emergency? Use the in-lounge profile menu to ping moderators immediately.</p>
+
+        </div>
+
+      </div>
+
     </section>
+
+
+
+    <section class="section">
+
+      <div class="shell content-grid">
+
+        <article class="content-card content-card--wide">
+
+          <h2>Our values</h2>
+
+          <p>Curiosity, empathy, and zero tolerance for harassment anchor FortunePlay Fun. Hold space for different cultures, speak inclusively, and respect quiet modes when someone needs a breather.</p>
+
+          <p>We reserve the right to remove any content or account that undermines these values even if it is not listed line by line below.</p>
+
+        </article>
+
+        <article class="content-card">
+
+          <h3>Harassment & abuse</h3>
+
+          <ul>
+
+            <li>Targeted bullying, threats, or intimidation.</li>
+
+            <li>Unwanted romantic or sexual advances.</li>
+
+            <li>Doxxing or sharing private information.</li>
+
+          </ul>
+
+        </article>
+
+        <article class="content-card">
+
+          <h3>Hate speech & discrimination</h3>
+
+          <ul>
+
+            <li>Slurs or insults tied to protected characteristics.</li>
+
+            <li>Extremist propaganda, coded language, or symbols.</li>
+
+            <li>Promoting exclusion, segregation, or violence.</li>
+
+          </ul>
+
+        </article>
+
+        <article class="content-card">
+
+          <h3>Spam & exploitation</h3>
+
+          <ul>
+
+            <li>Commercial solicitations or referral schemes.</li>
+
+            <li>Sharing malware, phishing attempts, or deceptive links.</li>
+
+            <li>Posing as staff, moderators, or other players.</li>
+
+          </ul>
+
+        </article>
+
+        <article class="content-card">
+
+          <h3>Responsible play</h3>
+
+          <p>Offer resources instead of pressure. Encouraging unhealthy behavior, bypassing limits, or distributing unverified tips is prohibited.</p>
+
+        </article>
+
+        <article class="content-card">
+
+          <h3>Reporting workflow</h3>
+
+          <ol>
+
+            <li>Hit the in-room report tool or email <a href="mailto:support@fortuneplay.fun">support@fortuneplay.fun</a>.</li>
+
+            <li>Attach screenshots or timestamps if you can.</li>
+
+            <li>Expect acknowledgement within 24 hours plus a follow-up after review.</li>
+
+          </ol>
+
+        </article>
+
+        <article class="content-card">
+
+          <h3>Enforcement ladder</h3>
+
+          <ul>
+
+            <li>Friendly reminder &rarr; for accidental slips.</li>
+
+            <li>Official warning &rarr; logged on your profile.</li>
+
+            <li>Suspension &rarr; 24 hours to permanent depending on severity.</li>
+
+            <li>Removal &rarr; immediate for hate, threats, or exploitation.</li>
+
+          </ul>
+
+        </article>
+
+        <article class="content-card">
+
+          <h3>Appeals</h3>
+
+          <p>If you believe we made a mistake, email <a href="mailto:legal@fortuneplay.fun">legal@fortuneplay.fun</a> within 14 days with the username, date, and reason. A human reviews every appeal within 10 days.</p>
+
+        </article>
+
+      </div>
+
+    </section>
+
   </main>
 
-  <footer class="site-footer">
-    <div class="container footer-grid">
+  </main>
+
+  <footer class="footer">
+    <div class="shell footer__grid">
       <div>
-        <p class="footer-eyebrow">DIGIBOX LTD OOD</p>
-        <p class="footer-brand">Uberspinners</p>
-        <p class="muted">
-          A charming Irish social casino lounge where every rainbow ends in virtual gold. Earn daily clover drops,
-          unlock collectible frames, and chase leaderboard glory-never for cash, always for the thrill.
-        </p>
+
+      <a class="brand" href="/" aria-label="FortunePlay Fun home">
+                <div class='brand__logo' role='img' aria-label='FortunePlay Fun textured logo'>
+          <span aria-hidden='true'>fortuneplay.fun</span>
+        </div>
+      </a>
+
+        <p>FortunePlay Fun keeps social casino nights calm, human, and quick to support.</p>
       </div>
       <div>
-        <h3>Services</h3>
-        <ul>
-<li><a href="/leaderboard/">Leaderboard</a></li>
-          <li><a href="/daily-bonus/">Daily Bonus</a></li>
-          <li><a href="/frames/">Frames</a></li>
-        </ul>
+        <small>Explore</small>
+        <p><a href="/how-it-works/">How it works</a><br>
+        <a href="/terms/">Terms</a><br>
+        <a href="/privacy/">Privacy</a><br>
+        <a href="/cookie-policy/">Cookie policy</a></p>
       </div>
       <div>
-        <h3>Company</h3>
-        <ul>
-          <li><a href="/responsible-play/">Responsible Play</a></li>
-          <li><a href="/how-it-works/">How It Works</a></li>
-          <li><a href="/community-guidelines/">Community Guidelines</a></li>
-          <li><a href="/accessibility/">Accessibility</a></li>
-        </ul>
-      </div>
-      <div>
-        <h3>Contact</h3>
-        <ul>
-          <li><a href="mailto:support@uberspinners.com">support@uberspinners.com</a></li>
-          <li>86 Ul. Oborishte str., R-N OBORISHTE DISTR., AP. 9, FLOOR 4</li>
-          <li>Sofia, 1505, Sofia-grad, Bulgaria</li>
-        </ul>
+        <small>Support</small>
+        <p><a href="/responsible-play/">Responsible play</a><br>
+        <a href="/data-rights/">Data rights</a><br>
+        <a href="/accessibility/">Accessibility</a><br>
+        <a href="/contact/">Contact</a><br>
+        <a href="/cookie-settings/">Cookie settings</a></p>
       </div>
     </div>
-
-    <div class="container footer-badges">
-      <p class="muted badge-note">Partner resources &amp; compliance</p>
-      <div class="badge-grid">
-        <img src="/public/images/footerimages/dmcaprotectionlogo2png-8hac.avif" alt="DMCA.com Protection Status">
-        <img src="/public/images/footerimages/gordonmoodywhitelogopng-xucr.avif" alt="Gordon Moody">
-        <img src="/public/images/footerimages/peluurifootpng-xfwq.avif" alt="Peluuri">
-        <img src="/public/images/footerimages/legalagepng-bzk2.avif" alt="18+ Age Restriction">
-        <img src="/public/images/footerimages/ecogra.svg" alt="eCOGRA">
-        <img src="/public/images/footerimages/gambleaware.svg" alt="GambleAware">
-        <img src="/public/images/footerimages/gamcare.svg" alt="GamCare">
-        <img src="/public/images/footerimages/ncpg.svg" alt="National Council on Problem Gambling">
-        <img src="/public/images/footerimages/sslsecure.svg" alt="SSL Secure">
-      </div>
-    </div>
-
-    <div class="container footer-bottom">
-      <p class="muted">© 2025 DIGIBOX LTD OOD · Uberspinners. All rights reserved.</p>
-      <nav aria-label="Legal" class="legal-links">
-        <a href="/terms/">Terms</a>
-        <a href="/privacy/">Privacy</a>
-        <a href="/cookie-policy/">Cookie Policy</a>
-        <a href="/cookie-settings/">Cookie Settings</a>
-        <a href="/data-rights/">Data Rights</a>
-        <a href="/contact/">Contact</a>
-      </nav>
+    <div class="shell footer__logos" aria-label="Safety and support partners">
+      <a href="https://www.dmca.com/" target="_blank" rel="noopener nofollow">
+        <img src="/public/images/footerimages/dmcaprotectionlogo.webp" alt="DMCA.com protection status">
+      </a>
+      <a href="https://www.gordonmoody.org.uk/" target="_blank" rel="noopener nofollow">
+        <img src="/public/images/footerimages/gordonmoodywhitelogo.webp" alt="Gordon Moody charity">
+      </a>
+      <a href="https://peluuri.fi/en/" target="_blank" rel="noopener nofollow">
+        <img src="/public/images/footerimages/peluurifoot.webp" alt="Peluuri helpline">
+      </a>
     </div>
   </footer>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
