--- a/cookie-policy/index.html
+++ b/cookie-policy/index.html
@@ -3,208 +3,165 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#0a3a21">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <title>Cookie Policy | Uberspinners</title>
-  <meta name="description" content="Understand how Uberspinners uses cookies and similar technologies, including essential, analytics, and advertising cookies.">
-  <meta property="og:site_name" content="Uberspinners">
-  <meta property="og:title" content="Cookie Policy | Uberspinners">
-  <meta property="og:description" content="Understand how Uberspinners uses cookies and similar technologies.">
+  <meta name="theme-color" content="#f8cf5d">
+  <title>Cookie Policy | FortunePlay Fun</title>
+  <meta name="description" content="Understand how FortunePlay Fun uses cookies, storage, and analytics, and how to manage your preferences.">
+  <link rel="canonical" href="https://fortuneplay.fun/cookie-policy/">
+  <meta property="og:site_name" content="FortunePlay Fun">
+  <meta property="og:title" content="Cookie Policy | FortunePlay Fun">
+  <meta property="og:description" content="Breakdown of essential, analytics, and personalization cookies for the FortunePlay lounge.">
+  <meta property="og:url" content="https://fortuneplay.fun/cookie-policy/">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://uberspinners.com/cookie-policy/">
-  <meta property="og:image" content="https://uberspinners.com/public/images/uberspinners-hero.svg">
+  <meta property="og:image" content="https://fortuneplay.fun/public/images/shareimage.webp">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Cookie Policy | Uberspinners">
-  <meta name="twitter:description" content="Understand how Uberspinners uses cookies and similar technologies.">
-  <meta name="twitter:image" content="https://uberspinners.com/public/images/uberspinners-hero.svg">
-  <link rel="canonical" href="https://uberspinners.com/cookie-policy/">
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
-  <link rel="stylesheet" href="/styles.css?v=2">
+  <meta name="twitter:title" content="Cookie Policy | FortunePlay Fun">
+  <meta name="twitter:description" content="See what data stays on your device and how to reset it.">
+  <meta name="twitter:image" content="https://fortuneplay.fun/public/images/shareimage.webp">
+
+  <link rel="icon" href="/favicon.ico" sizes="any">
+  <link rel="stylesheet" href="/styles.css?v=3">
 </head>
 <body>
   <a class="skip-link" href="#main-content">Skip to main content</a>
   <header class="site-header">
-    <div class="container header-inner">
-      <a class="brand" href="/">
-        <span class="brand-icon" aria-hidden="true">
-          <img src="/public/images/uberspinners-icon.svg" alt="" role="presentation">
-        </span>
-        <span class="brand-text">
-          <img src="/public/images/uberspinners-wordmark.svg" alt="Uberspinners">
-        </span>
+    <div class="shell header__inner">
+
+      <a class="brand" href="/" aria-label="FortunePlay Fun home">
+                <div class='brand__logo' role='img' aria-label='FortunePlay Fun textured logo'>
+          <span aria-hidden='true'>fortuneplay.fun</span>
+        </div>
       </a>
+
       <nav class="site-nav" aria-label="Primary">
-        <a href="/" class="nav-link">Home</a>
-<a href="/leaderboard/" class="nav-link">Leaderboard</a>
-        <a href="/daily-bonus/" class="nav-link">Daily Bonus</a>
-        <a href="/frames/" class="nav-link">Frames</a>
-        <a href="/responsible-play/" class="nav-link">Responsible Play</a>
-        <a href="/contact/" class="nav-link">Contact</a>
+        <a href="/">Home</a>
+        <a href="/community/">Community</a>
+        <a href="/responsible-play/">Responsible Play</a>
+        <a href="/contact/">Contact</a>
       </nav>
     </div>
   </header>
 
   <main id="main-content">
-    <section class="surface">
-      <div class="container page-intro">
-        <h1>Cookie Policy</h1>
-        <p class="lead">Last updated: October 2025</p>
+    <section class="hero hero--sub">
+      <div class="shell hero__grid">
+        <div>
+          <p class="pill">Privacy</p>
+          <h1>Cookie & storage policy.</h1>
+          <p>We keep FortunePlay light: only essential cookies by default, with optional analytics if you opt in.</p>
+          <p style="color:var(--muted);">Last updated: November 2025</p>
+        </div>
+        <div class="hero__card">
+          <h3>Manage preferences</h3>
+          <p>Update consent any time on the <a href="/cookie-settings/">cookie settings</a> page. Deleting cookies resets your lounge preferences.</p>
+        </div>
       </div>
     </section>
 
-    <section class="container page-body legal">
-      <section>
-        <h2>What are cookies?</h2>
-        <p>
-          Cookies are small text files stored on your device when you visit a website. They help us remember your preferences,
-          keep you signed in, and understand how you interact with the lounge.
-        </p>
-      </section>
-
-      <section>
-        <h2>IAB TCF 2.2 compliance</h2>
-        <p>
-          Our consent banner aligns with the IAB Transparency &amp; Consent Framework (TCF) v2.2. Your preferences are passed to
-          participating vendors to respect your privacy choices across advertising platforms.
-        </p>
-      </section>
-
-      <section>
-        <h2>Types of cookies we use</h2>
-        <div class="feature-stack">
-          <article>
-            <h3>1. Necessary cookies</h3>
-            <p><strong>Purpose:</strong> Essential for the website to function (authentication, security, session management).</p>
-            <p><strong>Duration:</strong> Session-based or up to 12 months.</p>
-          </article>
-          <article>
-            <h3>2. Analytics cookies</h3>
-            <p><strong>Purpose:</strong> Measure how visitors use the lounge (page views, time on page, navigation paths).</p>
-            <p><strong>Examples:</strong> Google Analytics, Mixpanel.</p>
-            <p><strong>Duration:</strong> Up to 24 months.</p>
-          </article>
-          <article>
-            <h3>3. Advertising cookies</h3>
-            <p><strong>Purpose:</strong> Deliver relevant marketing messages and measure campaign effectiveness.</p>
-            <p><strong>Partners:</strong> Google Ads, Meta Pixel, trusted ad networks.</p>
-            <p><strong>Duration:</strong> Up to 13 months.</p>
-          </article>
-        </div>
-      </section>
-
-      <section>
-        <h2>Third-party services</h2>
-        <p>These providers may set cookies on our behalf:</p>
-        <ul>
-          <li><strong>Google Analytics:</strong> Usage analytics and reporting.</li>
-          <li><strong>Google Ads:</strong> Advertising and remarketing.</li>
-          <li><strong>Meta (Facebook) Pixel:</strong> Social media advertising measurement.</li>
-          <li><strong>Supabase:</strong> Authentication and backend services.</li>
-        </ul>
-      </section>
-
-      <section>
-        <h2>Managing your preferences</h2>
-        <p>Control cookies by:</p>
-        <ul>
-          <li>Visiting the <a href="/cookie-settings/">Cookie Settings</a> page to adjust optional categories.</li>
-          <li>Using your browser settings to block or delete cookies.</li>
-          <li>Opting out of interest-based advertising via industry tools (for example, <a href="https://optout.aboutads.info/">aboutads.info</a>).</li>
-        </ul>
-        <p class="muted">Blocking certain cookies may limit access to some lounge features.</p>
-      </section>
-
-      <section>
-        <h2>Browser controls</h2>
-        <ul>
-          <li><strong>Chrome:</strong> Settings → Privacy and security → Cookies and other site data</li>
-          <li><strong>Firefox:</strong> Settings → Privacy &amp; Security → Cookies and Site Data</li>
-          <li><strong>Safari:</strong> Preferences → Privacy → Cookies and website data</li>
-          <li><strong>Edge:</strong> Settings → Cookies and site permissions</li>
-        </ul>
-      </section>
-
-      <section>
-        <h2>Updates to this policy</h2>
-        <p>We may revise this policy as our use of cookies evolves. Any updates appear on this page with a new revision date.</p>
-      </section>
-
-      <section>
-        <h2>Contact</h2>
-        <p>
-          Questions about cookies? Email <a href="mailto:privacy@uberspinners.com">privacy@uberspinners.com</a> or reach out from the <a href="/contact/">contact page</a>.
-        </p>
-      </section>
+    <section class="section">
+      <div class="shell content-grid">
+        <article class="content-card">
+          <h2>What are cookies?</h2>
+          <p>Cookies and local storage entries are small snippets saved on your device. They remember settings such as dark/light preferences, login tokens, or whether you joined the community callout.</p>
+        </article>
+        <article class="content-card">
+          <h2>Essential cookies</h2>
+          <p>Required for site functionality (session ID, CSRF defense, saved accessibility settings). They load automatically and expire within 12 months.</p>
+        </article>
+        <article class="content-card">
+          <h2>Analytics</h2>
+          <p>We use privacy-friendly analytics to understand which pages resonate. These load only if you consent to measurement cookies.</p>
+          <ul>
+            <li>Tool: self-hosted Plausible.</li>
+            <li>Data: page URL, user agent, referrer, approximate region.</li>
+            <li>Retention: 14 months.</li>
+          </ul>
+        </article>
+        <article class="content-card">
+          <h2>Personalization</h2>
+          <p>Optional storage for saving favorite rooms, chosen frames, or chill-mode toggles. Disable it and everything resets between visits.</p>
+        </article>
+        <article class="content-card">
+          <h2>Third parties</h2>
+          <p>We don't run ads or share cookie data with brokers. Vendors with limited access include payment processors (for merch) and email delivery partners. They receive only the cookies required to operate.</p>
+        </article>
+        <article class="content-card">
+          <h2>How to control</h2>
+          <ul>
+            <li>Use the <a href="/cookie-settings/">Cookie Settings</a> panel to opt in/out.</li>
+            <li>Clear cookies via your browser.</li>
+            <li>Send "Do Not Track" and we'll treat it as an opt-out for analytics.</li>
+          </ul>
+        </article>
+        <article class="content-card">
+          <h2>Questions?</h2>
+          <p>Email <a href="mailto:privacy@fortuneplay.fun">privacy@fortuneplay.fun</a> or contact us if you have concerns about storage practices.</p>
+        </article>
+      </div>
     </section>
   </main>
 
-  <footer class="site-footer">
-    <div class="container footer-grid">
+  <footer class="footer">
+    <div class="shell footer__grid">
       <div>
-        <p class="footer-eyebrow">DIGIBOX LTD OOD</p>
-        <p class="footer-brand">Uberspinners</p>
-        <p class="muted">
-          A charming Irish social casino lounge where every rainbow ends in virtual gold. Earn daily clover drops,
-          unlock collectible frames, and chase leaderboard glory-never for cash, always for the thrill.
-        </p>
+
+      <a class="brand" href="/" aria-label="FortunePlay Fun home">
+                <div class='brand__logo' role='img' aria-label='FortunePlay Fun textured logo'>
+          <span aria-hidden='true'>fortuneplay.fun</span>
+        </div>
+      </a>
+
+        <p>FortunePlay Fun keeps social casino nights calm, human, and quick to support.</p>
       </div>
       <div>
-        <h3>Services</h3>
-        <ul>
-<li><a href="/leaderboard/">Leaderboard</a></li>
-          <li><a href="/daily-bonus/">Daily Bonus</a></li>
-          <li><a href="/frames/">Frames</a></li>
-        </ul>
+        <small>Explore</small>
+        <p><a href="/how-it-works/">How it works</a><br>
+        <a href="/terms/">Terms</a><br>
+        <a href="/privacy/">Privacy</a><br>
+        <a href="/cookie-policy/">Cookie policy</a></p>
       </div>
       <div>
-        <h3>Company</h3>
-        <ul>
-          <li><a href="/responsible-play/">Responsible Play</a></li>
-          <li><a href="/how-it-works/">How It Works</a></li>
-          <li><a href="/community-guidelines/">Community Guidelines</a></li>
-          <li><a href="/accessibility/">Accessibility</a></li>
-        </ul>
-      </div>
-      <div>
-        <h3>Contact</h3>
-        <ul>
-          <li><a href="mailto:support@uberspinners.com">support@uberspinners.com</a></li>
-          <li>86 Ul. Oborishte str., R-N OBORISHTE DISTR., AP. 9, FLOOR 4</li>
-          <li>Sofia, 1505, Sofia-grad, Bulgaria</li>
-        </ul>
+        <small>Support</small>
+        <p><a href="/responsible-play/">Responsible play</a><br>
+        <a href="/data-rights/">Data rights</a><br>
+        <a href="/accessibility/">Accessibility</a><br>
+        <a href="/contact/">Contact</a><br>
+        <a href="/cookie-settings/">Cookie settings</a></p>
       </div>
     </div>
-
-    <div class="container footer-badges">
-      <p class="muted badge-note">Partner resources &amp; compliance</p>
-      <div class="badge-grid">
-        <img src="/public/images/footerimages/dmcaprotectionlogo2png-8hac.avif" alt="DMCA.com Protection Status">
-        <img src="/public/images/footerimages/gordonmoodywhitelogopng-xucr.avif" alt="Gordon Moody">
-        <img src="/public/images/footerimages/peluurifootpng-xfwq.avif" alt="Peluuri">
-        <img src="/public/images/footerimages/legalagepng-bzk2.avif" alt="18+ Age Restriction">
-        <img src="/public/images/footerimages/ecogra.svg" alt="eCOGRA">
-        <img src="/public/images/footerimages/gambleaware.svg" alt="GambleAware">
-        <img src="/public/images/footerimages/gamcare.svg" alt="GamCare">
-        <img src="/public/images/footerimages/ncpg.svg" alt="National Council on Problem Gambling">
-        <img src="/public/images/footerimages/sslsecure.svg" alt="SSL Secure">
-      </div>
-    </div>
-
-    <div class="container footer-bottom">
-      <p class="muted">© 2025 DIGIBOX LTD OOD · Uberspinners. All rights reserved.</p>
-      <nav aria-label="Legal" class="legal-links">
-        <a href="/terms/">Terms</a>
-        <a href="/privacy/">Privacy</a>
-        <a href="/cookie-policy/">Cookie Policy</a>
-        <a href="/cookie-settings/">Cookie Settings</a>
-        <a href="/data-rights/">Data Rights</a>
-        <a href="/contact/">Contact</a>
-      </nav>
+    <div class="shell footer__logos" aria-label="Safety and support partners">
+      <a href="https://www.dmca.com/" target="_blank" rel="noopener nofollow">
+        <img src="/public/images/footerimages/dmcaprotectionlogo.webp" alt="DMCA.com protection status">
+      </a>
+      <a href="https://www.gordonmoody.org.uk/" target="_blank" rel="noopener nofollow">
+        <img src="/public/images/footerimages/gordonmoodywhitelogo.webp" alt="Gordon Moody charity">
+      </a>
+      <a href="https://peluuri.fi/en/" target="_blank" rel="noopener nofollow">
+        <img src="/public/images/footerimages/peluurifoot.webp" alt="Peluuri helpline">
+      </a>
     </div>
   </footer>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
