--- a/leaderboard/index.html
+++ b/leaderboard/index.html
@@ -3,22 +3,22 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#0a3a21">
+    <meta name="theme-color" content="#ff8c5f">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <title>Leaderboard | Uberspinners</title>
-  <meta name="description" content="Track Uberspinners leaderboard rankings. Progress is earned through free play only—no purchases, no pay-to-win.">
-  <meta property="og:site_name" content="Uberspinners">
-  <meta property="og:title" content="Leaderboard | Uberspinners">
-  <meta property="og:description" content="Track Uberspinners leaderboard rankings. Free play only—no purchases.">
+  <title>Leaderboard | FortunePlay</title>
+  <meta name="description" content="Track FortunePlay leaderboard rankings. Progress is earned through free play only&mdash;no purchases, no pay-to-win.">
+  <meta property="og:site_name" content="FortunePlay">
+  <meta property="og:title" content="Leaderboard | FortunePlay">
+  <meta property="og:description" content="Track FortunePlay leaderboard rankings. Free play only&mdash;no purchases.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://uberspinners.com/leaderboard/">
-  <meta property="og:image" content="https://uberspinners.com/public/images/uberspinners-hero.svg">
+  <meta property="og:url" content="https://fortuneplay.fun/leaderboard/">
+  <meta property="og:image" content="https://fortuneplay.fun/public/images/shareimage.webp">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Leaderboard | Uberspinners">
-  <meta name="twitter:description" content="Track Uberspinners leaderboard rankings. Free play only—no purchases.">
-  <meta name="twitter:image" content="https://uberspinners.com/public/images/uberspinners-hero.svg">
-  <link rel="canonical" href="https://uberspinners.com/leaderboard/">
+  <meta name="twitter:title" content="Leaderboard | FortunePlay">
+  <meta name="twitter:description" content="Track FortunePlay leaderboard rankings. Free play only&mdash;no purchases.">
+  <meta name="twitter:image" content="https://fortuneplay.fun/public/images/shareimage.webp">
+  <link rel="canonical" href="https://fortuneplay.fun/leaderboard/">
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link rel="stylesheet" href="/styles.css?v=2">
 </head>
@@ -28,10 +28,10 @@
     <div class="container header-inner">
       <a class="brand" href="/">
         <span class="brand-icon" aria-hidden="true">
-          <img src="/public/images/uberspinners-icon.svg" alt="" role="presentation">
+          <img src="/public/images/FortunePlay-icon.svg" alt="" role="presentation">
         </span>
         <span class="brand-text">
-          <img src="/public/images/uberspinners-wordmark.svg" alt="Uberspinners">
+          <img src="/public/images/FortunePlay-wordmark.svg" alt="FortunePlay">
         </span>
       </a>
       <nav class="site-nav" aria-label="Primary">
@@ -108,7 +108,7 @@
           Maintain a streak of positive community reports and climb the leaderboard organically.
         </p>
         <p class="muted">
-          Season 8 Champion: <strong>LuminaVale</strong> - Earned the exclusive “Aether Laurels” frame.
+          Season 8 Champion: <strong>LuminaVale</strong> - Earned the exclusive "Aether Laurels" frame.
         </p>
       </section>
     </section>
@@ -118,7 +118,7 @@
     <div class="container footer-grid">
       <div>
         <p class="footer-eyebrow">DIGIBOX LTD OOD</p>
-        <p class="footer-brand">Uberspinners</p>
+        <p class="footer-brand">FortunePlay</p>
         <p class="muted">
           A charming Irish social casino lounge where every rainbow ends in virtual gold. Earn daily clover drops,
           unlock collectible frames, and chase leaderboard glory-never for cash, always for the thrill.
@@ -144,7 +144,7 @@
       <div>
         <h3>Contact</h3>
         <ul>
-          <li><a href="mailto:support@uberspinners.com">support@uberspinners.com</a></li>
+          <li><a href="mailto:support@fortuneplay.fun">support@fortuneplay.fun</a></li>
           <li>86 Ul. Oborishte str., R-N OBORISHTE DISTR., AP. 9, FLOOR 4</li>
           <li>Sofia, 1505, Sofia-grad, Bulgaria</li>
         </ul>
@@ -154,20 +154,14 @@
     <div class="container footer-badges">
       <p class="muted badge-note">Partner resources &amp; compliance</p>
       <div class="badge-grid">
-        <img src="/public/images/footerimages/dmcaprotectionlogo2png-8hac.avif" alt="DMCA.com Protection Status">
-        <img src="/public/images/footerimages/gordonmoodywhitelogopng-xucr.avif" alt="Gordon Moody">
-        <img src="/public/images/footerimages/peluurifootpng-xfwq.avif" alt="Peluuri">
-        <img src="/public/images/footerimages/legalagepng-bzk2.avif" alt="18+ Age Restriction">
-        <img src="/public/images/footerimages/ecogra.svg" alt="eCOGRA">
-        <img src="/public/images/footerimages/gambleaware.svg" alt="GambleAware">
-        <img src="/public/images/footerimages/gamcare.svg" alt="GamCare">
-        <img src="/public/images/footerimages/ncpg.svg" alt="National Council on Problem Gambling">
-        <img src="/public/images/footerimages/sslsecure.svg" alt="SSL Secure">
+        <img src="/public/images/footerimages/dmcaprotectionlogo.webp" alt="DMCA.com protection status">
+        <img src="/public/images/footerimages/gordonmoodywhitelogo.webp" alt="Gordon Moody charity">
+        <img src="/public/images/footerimages/peluurifoot.webp" alt="Peluuri helpline">
       </div>
     </div>
 
     <div class="container footer-bottom">
-      <p class="muted">© 2025 DIGIBOX LTD OOD · Uberspinners. All rights reserved.</p>
+      <p class="muted">© 2025 DIGIBOX LTD OOD · FortunePlay. All rights reserved.</p>
       <nav aria-label="Legal" class="legal-links">
         <a href="/terms/">Terms</a>
         <a href="/privacy/">Privacy</a>
@@ -180,6 +174,21 @@
   </footer>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
