Copy terms/index.html from fortuneplay-fun-ppc-social-casino

--- a/terms/index.html
+++ b/terms/index.html
@@ -3,199 +3,171 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#0a3a21">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <title>Terms of Service | Uberspinners</title>
-  <meta name="description" content="Review the Uberspinners Terms of Service. Understand account responsibilities, virtual currency rules, and acceptable use of the lounge.">
-  <meta property="og:site_name" content="Uberspinners">
-  <meta property="og:title" content="Terms of Service | Uberspinners">
-  <meta property="og:description" content="Review the Uberspinners Terms of Service and acceptable use.">
+  <meta name="theme-color" content="#f8cf5d">
+  <title>Terms of Service | FortunePlay Fun</title>
+  <meta name="description" content="Read the FortunePlay Fun terms covering accounts, acceptable use, virtual items, and responsible play.">
+  <link rel="canonical" href="https://fortuneplay.fun/terms/">
+  <meta property="og:site_name" content="FortunePlay Fun">
+  <meta property="og:title" content="Terms of Service | FortunePlay Fun">
+  <meta property="og:description" content="The legal agreement that governs your use of FortunePlay.">
+  <meta property="og:url" content="https://fortuneplay.fun/terms/">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://uberspinners.com/terms/">
-  <meta property="og:image" content="https://uberspinners.com/public/images/uberspinners-hero.svg">
+  <meta property="og:image" content="https://fortuneplay.fun/public/images/shareimage.webp">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Terms of Service | Uberspinners">
-  <meta name="twitter:description" content="Review the Uberspinners Terms of Service and acceptable use.">
-  <meta name="twitter:image" content="https://uberspinners.com/public/images/uberspinners-hero.svg">
-  <link rel="canonical" href="https://uberspinners.com/terms/">
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
-  <link rel="stylesheet" href="/styles.css?v=2">
+  <meta name="twitter:title" content="Terms of Service | FortunePlay Fun">
+  <meta name="twitter:description" content="Understand the rules of our social casino lounge.">
+  <meta name="twitter:image" content="https://fortuneplay.fun/public/images/shareimage.webp">
+
+  <link rel="icon" href="/favicon.ico" sizes="any">
+  <link rel="stylesheet" href="/styles.css?v=3">
 </head>
 <body>
   <a class="skip-link" href="#main-content">Skip to main content</a>
   <header class="site-header">
-    <div class="container header-inner">
-      <a class="brand" href="/">
-        <span class="brand-icon" aria-hidden="true">
-          <img src="/public/images/uberspinners-icon.svg" alt="" role="presentation">
-        </span>
-        <span class="brand-text">
-          <img src="/public/images/uberspinners-wordmark.svg" alt="Uberspinners">
-        </span>
+    <div class="shell header__inner">
+
+      <a class="brand" href="/" aria-label="FortunePlay Fun home">
+                <div class='brand__logo' role='img' aria-label='FortunePlay Fun textured logo'>
+          <span aria-hidden='true'>fortuneplay.fun</span>
+        </div>
       </a>
+
       <nav class="site-nav" aria-label="Primary">
-        <a href="/" class="nav-link">Home</a>
-<a href="/leaderboard/" class="nav-link">Leaderboard</a>
-        <a href="/daily-bonus/" class="nav-link">Daily Bonus</a>
-        <a href="/frames/" class="nav-link">Frames</a>
-        <a href="/responsible-play/" class="nav-link">Responsible Play</a>
-        <a href="/contact/" class="nav-link">Contact</a>
+        <a href="/">Home</a>
+        <a href="/community/">Community</a>
+        <a href="/responsible-play/">Responsible Play</a>
+        <a href="/contact/">Contact</a>
       </nav>
     </div>
   </header>
 
   <main id="main-content">
-    <section class="surface">
-      <div class="container page-intro">
-        <h1>Terms of Service</h1>
-        <p class="lead">Last updated: October 2025</p>
+    <section class="hero hero--sub">
+      <div class="shell hero__grid">
+        <div>
+          <p class="pill">Legal</p>
+          <h1>FortunePlay Fun Terms of Service.</h1>
+          <p>Last updated: November 2025. Please read carefully before enjoying the lounge.</p>
+        </div>
+        <div class="hero__card">
+          <h3>Questions?</h3>
+          <p>Email <a href="mailto:support@fortuneplay.fun">support@fortuneplay.fun</a> with the subject "Terms".</p>
+        </div>
       </div>
     </section>
 
-    <section class="container page-body legal">
-      <section>
-        <h2>1. Acceptance of terms</h2>
-        <p>
-          By accessing or using Uberspinners, you agree to be bound by these Terms of Service.
-          If you do not agree, please refrain from using the platform.
-        </p>
-      </section>
-
-      <section>
-        <h2>2. Virtual currency</h2>
-        <p>
-          All points, diamonds, and other virtual items have no monetary value. They cannot be exchanged for
-          cash, prizes, or other goods. The lounge is entertainment only.
-        </p>
-      </section>
-
-      <section>
-        <h2>3. Age restriction</h2>
-        <p>
-          You must be at least 18 years old to create an account or use the service. By joining, you confirm that
-          you meet this age requirement.
-        </p>
-      </section>
-
-      <section>
-        <h2>4. Account responsibilities</h2>
-        <p>
-          You are responsible for maintaining the confidentiality of your credentials and for all activity
-          that occurs under your account. Notify us immediately if you suspect unauthorised use.
-        </p>
-      </section>
-
-      <section>
-        <h2>5. Prohibited activities</h2>
-        <ul>
-          <li>Using automation, bots, or scripts to interact with the lounge.</li>
-          <li>Attempting to gain unauthorised access to any portion of the service.</li>
-          <li>Using the platform for any illegal or unauthorised purpose.</li>
-          <li>Sharing, selling, or trading your account.</li>
-          <li>Exploiting bugs, glitches, or unintended mechanics.</li>
-        </ul>
-      </section>
-
-      <section>
-        <h2>6. Service modifications</h2>
-        <p>
-          We may modify, suspend, or discontinue any feature at any time without notice. We are not liable
-          for any modification or discontinuance of the service.
-        </p>
-      </section>
-
-      <section>
-        <h2>7. Limitation of liability</h2>
-        <p>
-          Uberspinners and its operators are not liable for any direct, indirect, incidental, special,
-          or consequential damages arising from your use of the lounge.
-        </p>
-      </section>
-
-      <section>
-        <h2>8. Changes to terms</h2>
-        <p>
-          We may update these terms from time to time. Continued use after changes constitutes acceptance of
-          the revised terms.
-        </p>
-      </section>
-
-      <section>
-        <h2>9. Contact information</h2>
-        <p>
-          Questions about these terms? Email <a href="mailto:support@uberspinners.com">support@uberspinners.com</a>.
-        </p>
-      </section>
+    <section class="section">
+      <div class="shell content-grid">
+        <article class="content-card content-card--wide">
+          <h2>1. Overview</h2>
+          <p>FortunePlay Fun ("FortunePlay", "we", "us") operates a free-to-play social casino experience delivered via https://fortuneplay.fun. Accessing the site or creating a lounge pass means you agree to these terms and our supporting policies.</p>
+        </article>
+        <article class="content-card">
+          <h2>2. Eligibility</h2>
+          <p>You must be at least 18 years old and located in a jurisdiction where social casino games are legal. We may ask for proof of age or residency.</p>
+        </article>
+        <article class="content-card">
+          <h2>3. Accounts</h2>
+          <p>Keep your credentials secure and notify us immediately if you suspect misuse. You are responsible for activity on your lounge pass.</p>
+        </article>
+        <article class="content-card content-card--wide">
+          <h2>4. License & acceptable use</h2>
+          <p>We grant a limited, revocable, non-transferable license to access the lounge for personal entertainment. Do not scrape, reverse engineer, impersonate staff, exploit bugs, or use automated tools.</p>
+        </article>
+        <article class="content-card">
+          <h2>5. Virtual items</h2>
+          <p>All chips, frames, quests, and rewards have no cash value and cannot be redeemed for money or prizes. We may change item availability at any time.</p>
+        </article>
+        <article class="content-card">
+          <h2>6. Responsible use</h2>
+          <p>We provide safety prompts and pause tools, but you're responsible for your own play habits. Visit <a href="/responsible-play/">Responsible Play</a> for resources.</p>
+        </article>
+        <article class="content-card">
+          <h2>7. Intellectual property</h2>
+          <p>All artwork, copy, and code belong to FortunePlay unless otherwise noted. You may not reuse them without written consent.</p>
+        </article>
+        <article class="content-card">
+          <h2>8. Suspension</h2>
+          <p>We may suspend or terminate accounts that violate these terms or community guidelines. Suspensions can occur without notice when safety is at risk.</p>
+        </article>
+        <article class="content-card content-card--wide">
+          <h2>9. Disclaimers & liability</h2>
+          <p>The lounge is provided "as is" without warranties. FortunePlay and its affiliates are not liable for damages arising from your use, to the fullest extent permitted by law.</p>
+        </article>
+        <article class="content-card">
+          <h2>10. Changes</h2>
+          <p>We may update these terms occasionally. We'll post revisions here with a new "last updated" date.</p>
+        </article>
+        <article class="content-card">
+          <h2>11. Governing law</h2>
+          <p>These terms are governed by the laws of Oregon, USA, without regard to conflict-of-law rules.</p>
+        </article>
+      </div>
     </section>
   </main>
 
-  <footer class="site-footer">
-    <div class="container footer-grid">
+  <footer class="footer">
+    <div class="shell footer__grid">
       <div>
-        <p class="footer-eyebrow">DIGIBOX LTD OOD</p>
-        <p class="footer-brand">Uberspinners</p>
-        <p class="muted">
-          A charming Irish social casino lounge where every rainbow ends in virtual gold. Earn daily clover drops,
-          unlock collectible frames, and chase leaderboard glory-never for cash, always for the thrill.
-        </p>
+
+      <a class="brand" href="/" aria-label="FortunePlay Fun home">
+                <div class='brand__logo' role='img' aria-label='FortunePlay Fun textured logo'>
+          <span aria-hidden='true'>fortuneplay.fun</span>
+        </div>
+      </a>
+
+        <p>FortunePlay Fun keeps social casino nights calm, human, and quick to support.</p>
       </div>
       <div>
-        <h3>Services</h3>
-        <ul>
-<li><a href="/leaderboard/">Leaderboard</a></li>
-          <li><a href="/daily-bonus/">Daily Bonus</a></li>
-          <li><a href="/frames/">Frames</a></li>
-        </ul>
+        <small>Explore</small>
+        <p><a href="/how-it-works/">How it works</a><br>
+        <a href="/terms/">Terms</a><br>
+        <a href="/privacy/">Privacy</a><br>
+        <a href="/cookie-policy/">Cookie policy</a></p>
       </div>
       <div>
-        <h3>Company</h3>
-        <ul>
-          <li><a href="/responsible-play/">Responsible Play</a></li>
-          <li><a href="/how-it-works/">How It Works</a></li>
-          <li><a href="/community-guidelines/">Community Guidelines</a></li>
-          <li><a href="/accessibility/">Accessibility</a></li>
-        </ul>
-      </div>
-      <div>
-        <h3>Contact</h3>
-        <ul>
-          <li><a href="mailto:support@uberspinners.com">support@uberspinners.com</a></li>
-          <li>86 Ul. Oborishte str., R-N OBORISHTE DISTR., AP. 9, FLOOR 4</li>
-          <li>Sofia, 1505, Sofia-grad, Bulgaria</li>
-        </ul>
+        <small>Support</small>
+        <p><a href="/responsible-play/">Responsible play</a><br>
+        <a href="/data-rights/">Data rights</a><br>
+        <a href="/accessibility/">Accessibility</a><br>
+        <a href="/contact/">Contact</a><br>
+        <a href="/cookie-settings/">Cookie settings</a></p>
       </div>
     </div>
-
-    <div class="container footer-badges">
-      <p class="muted badge-note">Partner resources &amp; compliance</p>
-      <div class="badge-grid">
-        <img src="/public/images/footerimages/dmcaprotectionlogo2png-8hac.avif" alt="DMCA.com Protection Status">
-        <img src="/public/images/footerimages/gordonmoodywhitelogopng-xucr.avif" alt="Gordon Moody">
-        <img src="/public/images/footerimages/peluurifootpng-xfwq.avif" alt="Peluuri">
-        <img src="/public/images/footerimages/legalagepng-bzk2.avif" alt="18+ Age Restriction">
-        <img src="/public/images/footerimages/ecogra.svg" alt="eCOGRA">
-        <img src="/public/images/footerimages/gambleaware.svg" alt="GambleAware">
-        <img src="/public/images/footerimages/gamcare.svg" alt="GamCare">
-        <img src="/public/images/footerimages/ncpg.svg" alt="National Council on Problem Gambling">
-        <img src="/public/images/footerimages/sslsecure.svg" alt="SSL Secure">
-      </div>
-    </div>
-
-    <div class="container footer-bottom">
-      <p class="muted">© 2025 DIGIBOX LTD OOD · Uberspinners. All rights reserved.</p>
-      <nav aria-label="Legal" class="legal-links">
-        <a href="/terms/">Terms</a>
-        <a href="/privacy/">Privacy</a>
-        <a href="/cookie-policy/">Cookie Policy</a>
-        <a href="/cookie-settings/">Cookie Settings</a>
-        <a href="/data-rights/">Data Rights</a>
-        <a href="/contact/">Contact</a>
-      </nav>
+    <div class="shell footer__logos" aria-label="Safety and support partners">
+      <a href="https://www.dmca.com/" target="_blank" rel="noopener nofollow">
+        <img src="/public/images/footerimages/dmcaprotectionlogo.webp" alt="DMCA.com protection status">
+      </a>
+      <a href="https://www.gordonmoody.org.uk/" target="_blank" rel="noopener nofollow">
+        <img src="/public/images/footerimages/gordonmoodywhitelogo.webp" alt="Gordon Moody charity">
+      </a>
+      <a href="https://peluuri.fi/en/" target="_blank" rel="noopener nofollow">
+        <img src="/public/images/footerimages/peluurifoot.webp" alt="Peluuri helpline">
+      </a>
     </div>
   </footer>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
