--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="Content-Language" content="en-US">
-  <meta name="theme-color" content="#f8cf5d">
-  <title>FortunePlay Fun | Nightly Social Casino Retreat</title>
-  <meta name="description" content="FortunePlay Fun is a nightly social casino retreat with curated rooms, real hosts, and zero-cash rituals that keep play mindful and bright.">
-  <meta name="keywords" content="FortunePlay Fun, topzlots.online, social casino, free casino lounge, mindful slots, community gaming, hosted rooms">
+  <meta name="theme-color" content="#ff5f9e">
+  <title>TopzLots.online | Neon Social Casino Nightcaps</title>
+  <meta name="description" content="TopzLots.online is the neon social casino for mindful nightcaps&mdash;live hosts, crate-dug playlists, and zero-cash rituals that keep play bright and safe.">
+  <meta name="keywords" content="TopzLots.online, neon social casino, mindful slots, hosted rooms, breathing rituals, free social games, human-led lounge">
   <meta name="robots" content="index, follow">
-  <meta property="og:site_name" content="FortunePlay Fun">
-  <meta property="og:title" content="FortunePlay Fun | Nightly Social Casino Retreat">
-  <meta property="og:description" content="Enter FortunePlay Fun for curated rooms, human hosts, nightly playlists, and responsibility-first rituals&mdash;never deposits or withdrawals.">
+  <meta property="og:site_name" content="TopzLots.online">
+  <meta property="og:title" content="TopzLots.online | Neon Social Casino Nightcaps">
+  <meta property="og:description" content="Step inside TopzLots.online for human-hosted rooms, neon ambiance, and nightly rituals that keep social casino play grounded.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://topzlots.online/">
   <meta property="og:image" content="https://topzlots.online/public/images/shareimage.webp">
-  <meta property="og:image:alt" content="FortunePlay Fun collage with teal and gold lighting">
+  <meta property="og:image:alt" content="TopzLots.online collage glowing in magenta and violet light">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="FortunePlay Fun | Nightly Social Casino Retreat">
-  <meta name="twitter:description" content="Social slots, cards, and playlists hosted by humans with zero cash play and built-in pauses.">
+  <meta name="twitter:title" content="TopzLots.online | Neon Social Casino Nightcaps">
+  <meta name="twitter:description" content="Social casino rooms with live hosts, curated playlists, and mindful pauses every night on TopzLots.online.">
   <meta name="twitter:image" content="https://topzlots.online/public/images/shareimage.webp">
   <link rel="canonical" href="https://topzlots.online/">
   <link rel="alternate" href="https://topzlots.online/" hreflang="en">
@@ -31,9 +31,9 @@
   <a class="skip-link" href="#main-content">Skip to main content</a>
   <header class="site-header">
     <div class="shell header__inner">
-      <a class="brand" href="/" aria-label="FortunePlay Fun home">
-                <div class='brand__logo' role='img' aria-label='FortunePlay Fun textured logo'>
-          <span aria-hidden='true'>topzlots.online</span>
+      <a class="brand" href="/" aria-label="TopzLots.online home">
+                <div class='brand__logo' role='img' aria-label='TopzLots.online textured logo'>
+          <span aria-hidden='true'>TopzLots.online</span>
         </div>
       </a>
 
@@ -50,11 +50,11 @@
     <section class="hero hero--simple" id="overview">
       <div class="shell hero__simple">
         <div class="hero__intro">
-          <p class="pill">FortunePlay Fun</p>
-          <h1>A twilight lounge for fans of intentional social play.</h1>
-          <p>FortunePlay Fun opens four curated nights each week with live hosts, analog-style playlists, and scheduled breathers. No wallets, no withdrawals&mdash;just adults trading tactics, stories, and calm laughs between spins.</p>
+          <p class="pill">TopzLots.online social casino</p>
+          <h1>TopzLots.online is the neon social casino for playful nightcaps.</h1>
+          <p>TopzLots.online lights up four curated nights each week with human hosts, crate-dug playlists, and scheduled breathers. Chips stay virtual, the tone stays friendly, and the stories between spins are why we keep showing up.</p>
           <div class="button-row">
-            <a class="btn btn--primary" href="#experience">Enter FortunePlay Fun</a>
+            <a class="btn btn--primary" href="#experience">Enter TopzLots.online</a>
             <a class="btn btn--ghost" href="/responsible-play/">See our care standards</a>
           </div>
           <div class="hero__chips" aria-label="Quick stats">
@@ -85,13 +85,13 @@
 
           <p class="pill">Origin story</p>
 
-          <h2>How the FortunePlay Fun hideout took shape.</h2>
+          <h2>How the TopzLots.online hideout took shape.</h2>
 
-          <p>FortunePlay Fun was dreamed up by art directors, audio nerds, and support hosts who were over casino apps that bark orders. We wanted a lounge that feels like sliding into a favorite booth where rituals outrank rake.</p>
+          <p>TopzLots.online sparked when playlist diggers, art directors, and care hosts stared down loud casino apps and craved something softer. We wanted the web address itself to feel like a whispered invite to a rooftop parlor where rituals outrank rake.</p>
 
-          <p>We met in borrowed studios, swapped stems, and scribbled interface notes on acetate until the layout felt like a mixtape insert. A slower flight plan emerged: modular rooms, live hosts, and transparent rituals.</p>
+          <p>We gathered in borrowed studios, piped analog mixers through laptops, and layered gradients until the UI glowed like the lofi show posters we love. Every slider, prompt, and caption had to feel hand-poured so the social casino energy stayed human.</p>
 
-          <p>Prototype nights turned into calibration parties. We tuned glow levels, rehearsed tone of voice, and ran accessibility passes until the space behaved like a concierge team built it.</p>
+          <p>Prototype nights became ritual labs with friends moonlighting as hosts, accessibility readers, and vibe checkers. Those experiments set the cadence you feel now&mdash;shared breaths, calm playlists, and transparent resets before anyone spins.</p>
 
           <p>Every lesson landed inside a field journal, and those entries still guide each roadmap:</p>
 
@@ -151,7 +151,7 @@
 
             <p>As attendance climbed we trained moderators like concierge hosts&mdash;attentive, grounded, never loud. We rehearse greetings, resets, and exit rituals so every interaction feels deliberate.</p>
 
-            <p>Those playbooks now inform every email, playlist drop, and responsible-play check-in across FortunePlay Fun.</p>
+            <p>Those playbooks now inform every email, playlist drop, and responsible-play check-in across TopzLots.online.</p>
 
           </div>
 
@@ -193,7 +193,7 @@
 
           </ul>
 
-          <p>We still raise a toast to those original eight players whenever a new room opens. They proved FortunePlay Fun could stay generous, transparent, and real.</p>
+          <p>We still raise a toast to those original eight players whenever a new room opens. They proved TopzLots.online could stay generous, transparent, and real.</p>
 
         </div>
 
@@ -211,7 +211,7 @@
 
           <h2>Free access, social energy, adults only.</h2>
 
-          <p>FortunePlay Fun is for lounge fans who crave playlists and conversation more than flashing jackpots. We show up for rituals, not rush.</p>
+          <p>TopzLots.online is the nightly social casino for lounge fans who crave playlists and conversation more than flashing jackpots. We log in for rituals, not rushes.</p>
 
           <p>Keeping entry free removes hesitation. Centering community invites story swaps. Keeping it 18+ lets every host lean into frank pacing cues and wellbeing check-ins.</p>
 
@@ -471,7 +471,7 @@
 
           <h2>Respect is the jackpot.</h2>
 
-          <p>FortunePlay Fun only works when the lounge feels like a trusted crew unwinding after long days. Everyone in the room is a co-pilot, not a handle to chase.</p>
+          <p>TopzLots.online only works when the social casino lounge feels like a trusted crew unwinding after long days. Everyone in the room is a co-pilot, not a handle to chase.</p>
 
           <p>Moderators, tooling, and support docs are tuned like a studio session&mdash;clear roles, soft cues, and responsive care. We refine the playbook nightly with player feedback.</p>
 
@@ -569,7 +569,7 @@
 
           <div class="button-row">
 
-            <a class="btn btn--soft" href="/how-it-works/">See how FortunePlay works</a>
+            <a class="btn btn--soft" href="/how-it-works/">See how TopzLots.online works</a>
 
             <a class="btn btn--primary" href="/contact/">Talk to a host</a>
 
@@ -588,12 +588,12 @@
   <footer class="footer">
     <div class="shell footer__grid">
       <div>
-        <a class="brand" href="/" aria-label="FortunePlay Fun home">
-                  <div class='brand__logo' role='img' aria-label='FortunePlay Fun textured logo'>
-          <span aria-hidden='true'>topzlots.online</span>
+        <a class="brand" href="/" aria-label="TopzLots.online home">
+                  <div class='brand__logo' role='img' aria-label='TopzLots.online textured logo'>
+          <span aria-hidden='true'>TopzLots.online</span>
         </div>
         </a>
-        <p>FortunePlay Fun keeps social casino nights calm, human, and quick to support.</p>
+        <p>TopzLots.online keeps social casino nights calm, human, and quick to support.</p>
       </div>
       <div>
         <small>Explore</small>
