--- a/contact/index.html
+++ b/contact/index.html
@@ -1,21 +1,21 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#f8cf5d">
-  <title>Contact FortunePlay Fun</title>
-  <meta name="description" content="Reach the FortunePlay Fun team for support, accessibility requests, and legal questions.">
+  <meta name="theme-color" content="#ff5f9e">
+  <title>Contact TopzLots.online</title>
+  <meta name="description" content="Reach the TopzLots.online team for support, accessibility requests, and legal questions.">
   <link rel="canonical" href="https://topzlots.online/contact/">
-  <meta property="og:site_name" content="FortunePlay Fun">
-  <meta property="og:title" content="Contact FortunePlay Fun">
-  <meta property="og:description" content="Support, accessibility, and privacy contacts for FortunePlay.">
+  <meta property="og:site_name" content="TopzLots.online">
+  <meta property="og:title" content="Contact TopzLots.online">
+  <meta property="og:description" content="Support, accessibility, and privacy contacts for TopzLots.online.">
   <meta property="og:url" content="https://topzlots.online/contact/">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://topzlots.online/public/images/shareimage.webp">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Contact FortunePlay Fun">
-  <meta name="twitter:description" content="Talk directly with FortunePlay humans, care, context, and no canned responses.">
+  <meta name="twitter:title" content="Contact TopzLots.online">
+  <meta name="twitter:description" content="Talk directly with TopzLots.online humans for care, context, and no canned responses.">
   <meta name="twitter:image" content="https://topzlots.online/public/images/shareimage.webp">
 
   <link rel="icon" href="/favicon.ico" sizes="any">
@@ -26,9 +26,9 @@
   <header class="site-header">
     <div class="shell header__inner">
 
-      <a class="brand" href="/" aria-label="FortunePlay Fun home">
-                <div class='brand__logo' role='img' aria-label='FortunePlay Fun textured logo'>
-          <span aria-hidden='true'>topzlots.online</span>
+      <a class="brand" href="/" aria-label="TopzLots.online home">
+                <div class='brand__logo' role='img' aria-label='TopzLots.online textured logo'>
+          <span aria-hidden='true'>TopzLots.online</span>
         </div>
       </a>
 
@@ -46,7 +46,7 @@
       <div class="shell hero__grid">
         <div>
           <p class="pill">Connect</p>
-          <h1>Talk directly with FortunePlay humans.</h1>
+          <h1>Talk directly with TopzLots.online humans.</h1>
           <p>We answer every email, no ticket mazes, no canned responses. Share enough detail so we can help within one business day.</p>
         </div>
         <div class="hero__card">
@@ -100,7 +100,7 @@
         </div>
         <div class="content-card">
           <h2>Studio details</h2>
-          <p>FortunePlay Studio</p>
+          <p>TopzLots Studio</p>
           <p>PO Box 82012</p>
           <p>Portland, OR 97282 USA</p>
           <p>Card-based correspondance only; no walk-ins.</p>
@@ -113,13 +113,13 @@
     <div class="shell footer__grid">
       <div>
 
-      <a class="brand" href="/" aria-label="FortunePlay Fun home">
-                <div class='brand__logo' role='img' aria-label='FortunePlay Fun textured logo'>
-          <span aria-hidden='true'>topzlots.online</span>
+      <a class="brand" href="/" aria-label="TopzLots.online home">
+                <div class='brand__logo' role='img' aria-label='TopzLots.online textured logo'>
+          <span aria-hidden='true'>TopzLots.online</span>
         </div>
       </a>
 
-        <p>FortunePlay Fun keeps social casino nights calm, human, and quick to support.</p>
+        <p>TopzLots.online keeps social casino nights calm, human, and quick to support.</p>
       </div>
       <div>
         <small>Explore</small>
