--- a/data-rights/index.html
+++ b/data-rights/index.html
@@ -3,19 +3,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#f8cf5d">
-  <title>Data Rights | FortunePlay Fun</title>
-  <meta name="description" content="Learn how to exercise GDPR and CPRA rights with FortunePlay Fun, access, deletion, portability, and more in one place.">
+  <meta name="theme-color" content="#ff5f9e">
+  <title>Data Rights | TopzLots.online</title>
+  <meta name="description" content="Learn how to exercise GDPR and CPRA rights with TopzLots.online, access, deletion, portability, and more in one place.">
   <link rel="canonical" href="https://topzlots.online/data-rights/">
-  <meta property="og:site_name" content="FortunePlay Fun">
-  <meta property="og:title" content="Data Rights | FortunePlay Fun">
+  <meta property="og:site_name" content="TopzLots.online">
+  <meta property="og:title" content="Data Rights | TopzLots.online">
   <meta property="og:description" content="Request or delete your data, opt out of signals, and reach our privacy team directly.">
   <meta property="og:url" content="https://topzlots.online/data-rights/">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://topzlots.online/public/images/shareimage.webp">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Data Rights | FortunePlay Fun">
-  <meta name="twitter:description" content="FortunePlay honors GDPR + CPRA. Here is the guide to every right and how to submit a request.">
+  <meta name="twitter:title" content="Data Rights | TopzLots.online">
+  <meta name="twitter:description" content="TopzLots.online honors GDPR + CPRA. Here is the guide to every right and how to submit a request.">
   <meta name="twitter:image" content="https://topzlots.online/public/images/shareimage.webp">
 
   <link rel="icon" href="/favicon.ico" sizes="any">
@@ -26,9 +26,9 @@
   <header class="site-header">
     <div class="shell header__inner">
 
-      <a class="brand" href="/" aria-label="FortunePlay Fun home">
-                <div class='brand__logo' role='img' aria-label='FortunePlay Fun textured logo'>
-          <span aria-hidden='true'>topzlots.online</span>
+      <a class="brand" href="/" aria-label="TopzLots.online home">
+                <div class='brand__logo' role='img' aria-label='TopzLots.online textured logo'>
+          <span aria-hidden='true'>TopzLots.online</span>
         </div>
       </a>
 
@@ -46,8 +46,8 @@
       <div class="shell hero__grid">
         <div>
           <p class="pill">Privacy & trust</p>
-          <h1>Your FortunePlay data rights.</h1>
-          <p>FortunePlay Fun complies with GDPR, UK GDPR, and CPRA. This guide explains each right and how to request it without friction.</p>
+          <h1>Your TopzLots.online data rights.</h1>
+          <p>TopzLots.online complies with GDPR, UK GDPR, and CPRA. This guide explains each right and how to request it without friction.</p>
         </div>
         <div class="hero__card">
           <h3>Need a fast response?</h3>
@@ -119,13 +119,13 @@
     <div class="shell footer__grid">
       <div>
 
-      <a class="brand" href="/" aria-label="FortunePlay Fun home">
-                <div class='brand__logo' role='img' aria-label='FortunePlay Fun textured logo'>
-          <span aria-hidden='true'>topzlots.online</span>
+      <a class="brand" href="/" aria-label="TopzLots.online home">
+                <div class='brand__logo' role='img' aria-label='TopzLots.online textured logo'>
+          <span aria-hidden='true'>TopzLots.online</span>
         </div>
       </a>
 
-        <p>FortunePlay Fun keeps social casino nights calm, human, and quick to support.</p>
+        <p>TopzLots.online keeps social casino nights calm, human, and quick to support.</p>
       </div>
       <div>
         <small>Explore</small>
