--- a/how-it-works/index.html
+++ b/how-it-works/index.html
@@ -1,20 +1,20 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#f8cf5d">
-  <title>How FortunePlay Works</title>
-  <meta name="description" content="Understand the FortunePlay Fun flow, virtual currency only, calm rooms, and nightly drops.">
+  <meta name="theme-color" content="#ff5f9e">
+  <title>How TopzLots.online Works</title>
+  <meta name="description" content="Understand the TopzLots.online flow, virtual currency only, calm rooms, and nightly drops.">
   <link rel="canonical" href="https://topzlots.online/how-it-works/">
-  <meta property="og:site_name" content="FortunePlay Fun">
-  <meta property="og:title" content="How FortunePlay Works">
+  <meta property="og:site_name" content="TopzLots.online">
+  <meta property="og:title" content="How TopzLots.online Works">
   <meta property="og:description" content="Learn the simple steps to join our social casino lounge.">
   <meta property="og:url" content="https://topzlots.online/how-it-works/">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://topzlots.online/public/images/shareimage.webp">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="How FortunePlay Works">
+  <meta name="twitter:title" content="How TopzLots.online Works">
   <meta name="twitter:description" content="Virtual-only, zero cash-outs, pure vibe.">
   <meta name="twitter:image" content="https://topzlots.online/public/images/shareimage.webp">
 
@@ -26,9 +26,9 @@
   <header class="site-header">
     <div class="shell header__inner">
 
-      <a class="brand" href="/" aria-label="FortunePlay Fun home">
-                <div class='brand__logo' role='img' aria-label='FortunePlay Fun textured logo'>
-          <span aria-hidden='true'>topzlots.online</span>
+      <a class="brand" href="/" aria-label="TopzLots.online home">
+                <div class='brand__logo' role='img' aria-label='TopzLots.online textured logo'>
+          <span aria-hidden='true'>TopzLots.online</span>
         </div>
       </a>
 
@@ -46,7 +46,7 @@
       <div class="shell hero__grid">
         <div>
           <p class="pill">Lounge primer</p>
-          <h1>How FortunePlay works.</h1>
+          <h1>How TopzLots.online works.</h1>
           <p>Virtual-only, zero cash-outs, curated nightly drops.</p>
         </div>
         <div class="hero__card">
@@ -131,13 +131,13 @@
     <div class="shell footer__grid">
       <div>
 
-      <a class="brand" href="/" aria-label="FortunePlay Fun home">
-                <div class='brand__logo' role='img' aria-label='FortunePlay Fun textured logo'>
-          <span aria-hidden='true'>topzlots.online</span>
+      <a class="brand" href="/" aria-label="TopzLots.online home">
+                <div class='brand__logo' role='img' aria-label='TopzLots.online textured logo'>
+          <span aria-hidden='true'>TopzLots.online</span>
         </div>
       </a>
 
-        <p>FortunePlay Fun keeps social casino nights calm, human, and quick to support.</p>
+        <p>TopzLots.online keeps social casino nights calm, human, and quick to support.</p>
       </div>
       <div>
         <small>Explore</small>
