--- a/leaderboard/index.html
+++ b/leaderboard/index.html
@@ -3,36 +3,33 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#ff8c5f">
+    <meta name="theme-color" content="#ff5f9e">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <title>Leaderboard | FortunePlay</title>
-  <meta name="description" content="Track FortunePlay leaderboard rankings. Progress is earned through free play only&mdash;no purchases, no pay-to-win.">
-  <meta property="og:site_name" content="FortunePlay">
-  <meta property="og:title" content="Leaderboard | FortunePlay">
-  <meta property="og:description" content="Track FortunePlay leaderboard rankings. Free play only&mdash;no purchases.">
+  <title>Leaderboard | TopzLots.online</title>
+  <meta name="description" content="Track TopzLots.online leaderboard rankings. Progress is earned through free social casino play&mdash;no purchases, no pay-to-win.">
+  <meta property="og:site_name" content="TopzLots.online">
+  <meta property="og:title" content="Leaderboard | TopzLots.online">
+  <meta property="og:description" content="Track TopzLots.online leaderboard rankings. Free play only&mdash;no purchases.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://topzlots.online/leaderboard/">
   <meta property="og:image" content="https://topzlots.online/public/images/shareimage.webp">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Leaderboard | FortunePlay">
-  <meta name="twitter:description" content="Track FortunePlay leaderboard rankings. Free play only&mdash;no purchases.">
+  <meta name="twitter:title" content="Leaderboard | TopzLots.online">
+  <meta name="twitter:description" content="Track TopzLots.online leaderboard rankings. Free play only&mdash;no purchases.">
   <meta name="twitter:image" content="https://topzlots.online/public/images/shareimage.webp">
   <link rel="canonical" href="https://topzlots.online/leaderboard/">
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
-  <link rel="stylesheet" href="/styles.css?v=2">
+  <link rel="stylesheet" href="/styles.css?v=3">
 </head>
 <body>
   <a class="skip-link" href="#main-content">Skip to main content</a>
   <header class="site-header">
     <div class="container header-inner">
-      <a class="brand" href="/">
-        <span class="brand-icon" aria-hidden="true">
-          <img src="/public/images/FortunePlay-icon.svg" alt="" role="presentation">
-        </span>
-        <span class="brand-text">
-          <img src="/public/images/FortunePlay-wordmark.svg" alt="FortunePlay">
-        </span>
+      <a class="brand" href="/" aria-label="TopzLots.online home">
+        <div class='brand__logo' role='img' aria-label='TopzLots.online textured logo'>
+          <span aria-hidden='true'>TopzLots.online</span>
+        </div>
       </a>
       <nav class="site-nav" aria-label="Primary">
         <a href="/" class="nav-link">Home</a>
@@ -118,10 +115,10 @@
     <div class="container footer-grid">
       <div>
         <p class="footer-eyebrow">DIGIBOX LTD OOD</p>
-        <p class="footer-brand">FortunePlay</p>
+        <p class="footer-brand">TopzLots.online</p>
         <p class="muted">
-          A charming Irish social casino lounge where every rainbow ends in virtual gold. Earn daily clover drops,
-          unlock collectible frames, and chase leaderboard glory-never for cash, always for the thrill.
+          TopzLots.online is the neon social casino lounge built for mindful streaks. Earn daily drops,
+          unlock collectible frames, and chase leaderboard glory&mdash;never for cash, always for the vibes.
         </p>
       </div>
       <div>
@@ -161,7 +158,7 @@
     </div>
 
     <div class="container footer-bottom">
-      <p class="muted">© 2025 DIGIBOX LTD OOD · FortunePlay. All rights reserved.</p>
+      <p class="muted">© 2025 DIGIBOX LTD OOD · TopzLots.online. All rights reserved.</p>
       <nav aria-label="Legal" class="legal-links">
         <a href="/terms/">Terms</a>
         <a href="/privacy/">Privacy</a>
