--- a/privacy/index.html
+++ b/privacy/index.html
@@ -3,19 +3,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#f8cf5d">
-  <title>Privacy Policy | FortunePlay Fun</title>
-  <meta name="description" content="Learn how FortunePlay Fun handles account data, analytics, and your privacy rights.">
+  <meta name="theme-color" content="#ff5f9e">
+  <title>Privacy Policy | TopzLots.online</title>
+  <meta name="description" content="Learn how TopzLots.online handles account data, analytics, and your privacy rights.">
   <link rel="canonical" href="https://topzlots.online/privacy/">
-  <meta property="og:site_name" content="FortunePlay Fun">
-  <meta property="og:title" content="Privacy Policy | FortunePlay Fun">
+  <meta property="og:site_name" content="TopzLots.online">
+  <meta property="og:title" content="Privacy Policy | TopzLots.online">
   <meta property="og:description" content="Straightforward breakdown of the data we collect, why, and how to control it.">
   <meta property="og:url" content="https://topzlots.online/privacy/">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://topzlots.online/public/images/shareimage.webp">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Privacy Policy | FortunePlay Fun">
-  <meta name="twitter:description" content="See what information FortunePlay stores and how to request changes.">
+  <meta name="twitter:title" content="Privacy Policy | TopzLots.online">
+  <meta name="twitter:description" content="See what information TopzLots.online stores and how to request changes.">
   <meta name="twitter:image" content="https://topzlots.online/public/images/shareimage.webp">
 
   <link rel="icon" href="/favicon.ico" sizes="any">
@@ -26,9 +26,9 @@
   <header class="site-header">
     <div class="shell header__inner">
 
-      <a class="brand" href="/" aria-label="FortunePlay Fun home">
-                <div class='brand__logo' role='img' aria-label='FortunePlay Fun textured logo'>
-          <span aria-hidden='true'>topzlots.online</span>
+      <a class="brand" href="/" aria-label="TopzLots.online home">
+                <div class='brand__logo' role='img' aria-label='TopzLots.online textured logo'>
+          <span aria-hidden='true'>TopzLots.online</span>
         </div>
       </a>
 
@@ -96,7 +96,7 @@
         </article>
         <article class="content-card">
           <h2>Children</h2>
-          <p>FortunePlay is for adults 18+. We delete accounts belonging to minors as soon as we become aware.</p>
+          <p>TopzLots.online is for adults 18+. We delete accounts belonging to minors as soon as we become aware.</p>
         </article>
         <article class="content-card">
           <h2>Contact</h2>
@@ -111,13 +111,13 @@
     <div class="shell footer__grid">
       <div>
 
-      <a class="brand" href="/" aria-label="FortunePlay Fun home">
-                <div class='brand__logo' role='img' aria-label='FortunePlay Fun textured logo'>
-          <span aria-hidden='true'>topzlots.online</span>
+      <a class="brand" href="/" aria-label="TopzLots.online home">
+                <div class='brand__logo' role='img' aria-label='TopzLots.online textured logo'>
+          <span aria-hidden='true'>TopzLots.online</span>
         </div>
       </a>
 
-        <p>FortunePlay Fun keeps social casino nights calm, human, and quick to support.</p>
+        <p>TopzLots.online keeps social casino nights calm, human, and quick to support.</p>
       </div>
       <div>
         <small>Explore</small>
