--- a/responsible-play/index.html
+++ b/responsible-play/index.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#f8cf5d">
-  <title>Responsible Play | FortunePlay Fun</title>
-  <meta name="description" content="FortunePlay Fun is entertainment-only. Review our safety tools, age limits, and support resources.">
+  <meta name="theme-color" content="#ff5f9e">
+  <title>Responsible Play | TopzLots.online</title>
+  <meta name="description" content="TopzLots.online is entertainment-only. Review our safety tools, age limits, and support resources.">
   <link rel="canonical" href="https://topzlots.online/responsible-play/">
-  <meta property="og:site_name" content="FortunePlay Fun">
-  <meta property="og:title" content="Responsible Play | FortunePlay Fun">
-  <meta property="og:description" content="Safety-first policies and resources for the FortunePlay lounge.">
+  <meta property="og:site_name" content="TopzLots.online">
+  <meta property="og:title" content="Responsible Play | TopzLots.online">
+  <meta property="og:description" content="Safety-first policies and resources for the TopzLots.online lounge.">
   <meta property="og:url" content="https://topzlots.online/responsible-play/">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://topzlots.online/public/images/shareimage.webp">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Responsible Play | FortunePlay Fun">
+  <meta name="twitter:title" content="Responsible Play | TopzLots.online">
   <meta name="twitter:description" content="Mindful play guidelines and help lines.">
   <meta name="twitter:image" content="https://topzlots.online/public/images/shareimage.webp">
 
@@ -26,9 +26,9 @@
   <header class="site-header">
     <div class="shell header__inner">
 
-      <a class="brand" href="/" aria-label="FortunePlay Fun home">
-                <div class='brand__logo' role='img' aria-label='FortunePlay Fun textured logo'>
-          <span aria-hidden='true'>topzlots.online</span>
+      <a class="brand" href="/" aria-label="TopzLots.online home">
+                <div class='brand__logo' role='img' aria-label='TopzLots.online textured logo'>
+          <span aria-hidden='true'>TopzLots.online</span>
         </div>
       </a>
 
@@ -47,7 +47,7 @@
         <div>
           <p class="pill">Safety first</p>
           <h1>Responsible play is our non-negotiable.</h1>
-          <p>FortunePlay is a chill lounge, not a path to profit. Keep sessions mindful, respect limits, and ask for help when something feels off.</p>
+          <p>TopzLots.online is a chill lounge, not a path to profit. Keep sessions mindful, respect limits, and ask for help when something feels off.</p>
         </div>
         <div class="hero__card">
           <h3>Need immediate help?</h3>
@@ -103,13 +103,13 @@
     <div class="shell footer__grid">
       <div>
 
-      <a class="brand" href="/" aria-label="FortunePlay Fun home">
-                <div class='brand__logo' role='img' aria-label='FortunePlay Fun textured logo'>
-          <span aria-hidden='true'>topzlots.online</span>
+      <a class="brand" href="/" aria-label="TopzLots.online home">
+                <div class='brand__logo' role='img' aria-label='TopzLots.online textured logo'>
+          <span aria-hidden='true'>TopzLots.online</span>
         </div>
       </a>
 
-        <p>FortunePlay Fun keeps social casino nights calm, human, and quick to support.</p>
+        <p>TopzLots.online keeps social casino nights calm, human, and quick to support.</p>
       </div>
       <div>
         <small>Explore</small>
