--- a/terms/index.html
+++ b/terms/index.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#f8cf5d">
-  <title>Terms of Service | FortunePlay Fun</title>
-  <meta name="description" content="Read the FortunePlay Fun terms covering accounts, acceptable use, virtual items, and responsible play.">
+  <meta name="theme-color" content="#ff5f9e">
+  <title>Terms of Service | TopzLots.online</title>
+  <meta name="description" content="Read the TopzLots.online terms covering accounts, acceptable use, virtual items, and responsible play.">
   <link rel="canonical" href="https://topzlots.online/terms/">
-  <meta property="og:site_name" content="FortunePlay Fun">
-  <meta property="og:title" content="Terms of Service | FortunePlay Fun">
-  <meta property="og:description" content="The legal agreement that governs your use of FortunePlay.">
+  <meta property="og:site_name" content="TopzLots.online">
+  <meta property="og:title" content="Terms of Service | TopzLots.online">
+  <meta property="og:description" content="The legal agreement that governs your use of TopzLots.online.">
   <meta property="og:url" content="https://topzlots.online/terms/">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://topzlots.online/public/images/shareimage.webp">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Terms of Service | FortunePlay Fun">
+  <meta name="twitter:title" content="Terms of Service | TopzLots.online">
   <meta name="twitter:description" content="Understand the rules of our social casino lounge.">
   <meta name="twitter:image" content="https://topzlots.online/public/images/shareimage.webp">
 
@@ -26,9 +26,9 @@
   <header class="site-header">
     <div class="shell header__inner">
 
-      <a class="brand" href="/" aria-label="FortunePlay Fun home">
-                <div class='brand__logo' role='img' aria-label='FortunePlay Fun textured logo'>
-          <span aria-hidden='true'>topzlots.online</span>
+      <a class="brand" href="/" aria-label="TopzLots.online home">
+                <div class='brand__logo' role='img' aria-label='TopzLots.online textured logo'>
+          <span aria-hidden='true'>TopzLots.online</span>
         </div>
       </a>
 
@@ -46,7 +46,7 @@
       <div class="shell hero__grid">
         <div>
           <p class="pill">Legal</p>
-          <h1>FortunePlay Fun Terms of Service.</h1>
+          <h1>TopzLots.online Terms of Service.</h1>
           <p>Last updated: November 2025. Please read carefully before enjoying the lounge.</p>
         </div>
         <div class="hero__card">
@@ -60,7 +60,7 @@
       <div class="shell content-grid">
         <article class="content-card content-card--wide">
           <h2>1. Overview</h2>
-          <p>FortunePlay Fun ("FortunePlay", "we", "us") operates a free-to-play social casino experience delivered via https://topzlots.online. Accessing the site or creating a lounge pass means you agree to these terms and our supporting policies.</p>
+          <p>TopzLots.online ("TopzLots", "we", "us") operates a free-to-play social casino experience delivered via https://topzlots.online. Accessing the site or creating a lounge pass means you agree to these terms and our supporting policies.</p>
         </article>
         <article class="content-card">
           <h2>2. Eligibility</h2>
@@ -84,7 +84,7 @@
         </article>
         <article class="content-card">
           <h2>7. Intellectual property</h2>
-          <p>All artwork, copy, and code belong to FortunePlay unless otherwise noted. You may not reuse them without written consent.</p>
+          <p>All artwork, copy, and code belong to TopzLots.online unless otherwise noted. You may not reuse them without written consent.</p>
         </article>
         <article class="content-card">
           <h2>8. Suspension</h2>
@@ -92,7 +92,7 @@
         </article>
         <article class="content-card content-card--wide">
           <h2>9. Disclaimers & liability</h2>
-          <p>The lounge is provided "as is" without warranties. FortunePlay and its affiliates are not liable for damages arising from your use, to the fullest extent permitted by law.</p>
+          <p>The lounge is provided "as is" without warranties. TopzLots.online and its affiliates are not liable for damages arising from your use, to the fullest extent permitted by law.</p>
         </article>
         <article class="content-card">
           <h2>10. Changes</h2>
@@ -110,13 +110,13 @@
     <div class="shell footer__grid">
       <div>
 
-      <a class="brand" href="/" aria-label="FortunePlay Fun home">
-                <div class='brand__logo' role='img' aria-label='FortunePlay Fun textured logo'>
-          <span aria-hidden='true'>topzlots.online</span>
+      <a class="brand" href="/" aria-label="TopzLots.online home">
+                <div class='brand__logo' role='img' aria-label='TopzLots.online textured logo'>
+          <span aria-hidden='true'>TopzLots.online</span>
         </div>
       </a>
 
-        <p>FortunePlay Fun keeps social casino nights calm, human, and quick to support.</p>
+        <p>TopzLots.online keeps social casino nights calm, human, and quick to support.</p>
       </div>
       <div>
         <small>Explore</small>
