--- a/index.html
+++ b/index.html
@@ -125,75 +125,63 @@
 
           <p>That founding momentum still bubbles up during updates: handwritten welcome notes, playlist swaps, and debrief calls where we listen more than we pitch.</p>
 
-          <div class="feature-card" style="margin-top:1.5rem;">
+          <div class="phase-grid" aria-label="Build phases">
 
-            <h3>The studio phase</h3>
+            <article class="phase-card">
+              <p class="phase-card__eyebrow">Phase 01</p>
+              <h3>Player-first builds</h3>
+              <p>We turned a drafty warehouse into a fake soundstage, stapling blackout cloth to rafters and sketching UI beats on butcher paper. The mission was simple: if the light cues felt off, the software did too.</p>
+              <p>Friends dropped by with pizza, circled layouts with wax pencils, and told us when the glow went too hard. That back-and-forth is why the current shell feels more cinematic than corporate.</p>
+            </article>
 
-            <p>We hung track lights inside a miniature warehouse, treated walls like gallery rails, and tuned glow levels until the room whispered. That practice taught us to treat digital rooms like boutique lounges where lighting, copy, and pacing all matter.</p>
+            <article class="phase-card">
+              <p class="phase-card__eyebrow">Phase 02</p>
+              <h3>Community remix</h3>
+              <p>Open-decks Thursdays morphed into a tiny residency. Folks lugged crates of records, swapped slow-chat prompts, and taped Polaroids to the door so new faces instantly felt included.</p>
+              <p>The “listening bar meets co-working nook” tone came from those nights, not a brand deck, and you still hear echoes of it in today’s onboarding scripts.</p>
+            </article>
 
-            <p>Friends swung by with snacks, played QA host, and called out sharp fonts or nagging CTAs. Those critiques shaped the calm shell you see today.</p>
-
-          </div>
-
-          <div class="feature-card" style="margin-top:1.5rem;">
-
-            <h3>The community phase</h3>
-
-            <p>Open studio nights slowly became weekly hangs that felt like mellow club residencies. We passed around instant photos, zines for song requests, and analog badges that inspired today's frames.</p>
-
-            <p>Hearing someone say "this lounge feels safer than my favorite bar" was the nudge that kept us iterating.</p>
-
-          </div>
-
-          <div class="feature-card" style="margin-top:1.5rem;">
-
-            <h3>The hosting phase</h3>
-
-            <p>As attendance climbed we trained moderators like concierge hosts&mdash;attentive, grounded, never loud. We rehearse greetings, resets, and exit rituals so every interaction feels deliberate.</p>
-
-            <p>Those playbooks now inform every email, playlist drop, and responsible-play check-in across TopzLots.online.</p>
+            <article class="phase-card">
+              <p class="phase-card__eyebrow">Phase 03</p>
+              <h3>Gameplay stewards</h3>
+              <p>Once attendance spiked we coached hosts like concierge staff. They practice greetings, pauses, and exit hugs until it feels lived-in, never robotic.</p>
+              <p>That rhythm now powers every playlist drop, responsible-play check-in, and DM reply across TopzLots.online.</p>
+            </article>
 
           </div>
 
         </div>
 
-        <div class="feature-card">
+        <div class="origin__spark" aria-labelledby="spark-title">
 
-          <h3>The spark</h3>
+          <div class="origin__spark-header">
+            <p class="pill pill--glow">Topz Reverie</p>
+            <h3 id="spark-title">Rain-slick streets. Neon daydreams.</h3>
+            <p>One stormy Portland weekend we lugged thrifted speakers, incense, and a crate of analog mixers into a borrowed loft. Teal fog coated the windows, moderators whispered like librarians, and eight friends forgot they were in a prototype.</p>
+            <p>The gear was mismatched, the laptops recycled, but the vibe clicked. That night set the palette for every TopzLots.online room that followed.</p>
+          </div>
 
-          <p>One soaked Portland weekend we assembled the first prototype: teal fog, softened reels, and moderators speaking at library volume. Eight friends lingered for hours, so we widened the door.</p>
+          <div class="origin__spark-grid">
+            <article class="spark-chip">
+              <p class="spark-chip__label">Core energy</p>
+              <h4>Analog nights</h4>
+              <p>Handwritten pacing cards, lo-fi playlists, and unhurried pauses kept the room grounded even while the reels shimmered.</p>
+            </article>
+            <article class="spark-chip">
+              <p class="spark-chip__label">Tech ethos</p>
+              <h4>Human-first UI</h4>
+              <p>Interfaces had to read clean on thrift-store laptops, so we leaned on typography, captions, and tactile gestures instead of flash.</p>
+            </article>
+            <article class="spark-chip">
+              <p class="spark-chip__label">Care loop</p>
+              <h4>Hosts over scripts</h4>
+              <p>Every check-in, reset, and cooldown came from a real person. That promise still anchors today’s responsible-play rituals.</p>
+            </article>
+          </div>
 
-          <p>Those early sessions ran on reclaimed laptops and paper rulebooks. It sounded impossible, yet the room felt safe and the story circulated like a prized mixtape.</p>
-
-          <ul class="checklist" aria-label="Principles that still guide us">
-
-            <li>
-
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="20 6 9 17 4 12"/></svg>
-
-              <span>No cash-outs, ever. We celebrate streaks without tying them to spend.</span>
-
-            </li>
-
-            <li>
-
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="20 6 9 17 4 12"/></svg>
-
-              <span>Interfaces stay legible on humble hardware so a thrift-store laptop can keep up.</span>
-
-            </li>
-
-            <li>
-
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="20 6 9 17 4 12"/></svg>
-
-              <span>Humans run moderation, support, and responsible-play replies&mdash;no scripts, just people.</span>
-
-            </li>
-
-          </ul>
-
-          <p>We still raise a toast to those original eight players whenever a new room opens. They proved TopzLots.online could stay generous, transparent, and real.</p>
+          <div class="origin__spark-footer">
+            <p>We still toast those original eight guests whenever a new room opens. They proved a neon social casino could feel generous, transparent, and real.</p>
+          </div>
 
         </div>
 
