--- a/index.html
+++ b/index.html
@@ -49,26 +49,72 @@
   <main id="main-content">
     <section class="hero hero--simple" id="overview">
       <div class="shell hero__simple">
-        <div class="hero__intro">
-          <p class="pill">TopzLots.online social casino</p>
-          <h1>TopzLots.online is the neon social casino for playful nightcaps.</h1>
-          <p>TopzLots.online lights up four curated nights each week with human hosts, crate-dug playlists, and scheduled breathers. Chips stay virtual, the tone stays friendly, and the stories between spins are why we keep showing up.</p>
-          <div class="button-row">
-            <a class="btn btn--primary" href="#experience">Enter TopzLots.online</a>
-            <a class="btn btn--ghost" href="/responsible-play/">See our care standards</a>
+        <div class="hero__layout">
+          <div class="hero__intro">
+            <p class="pill">TopzLots.online social casino</p>
+            <h1>Neon nightcaps for mindful players.</h1>
+            <p>We slow the social casino script with crate-dug playlists, real hosts, and breathing breaks baked into every room. Chips stay virtual, laughter stays calm, and the best stories happen between spins.</p>
+            <div class="hero__highlight-list" aria-label="Experience highlights">
+              <span class="hero-tag">Live hosts nightly</span>
+              <span class="hero-tag">Zero cash play</span>
+              <span class="hero-tag">Playlist-led rooms</span>
+              <span class="hero-tag">Built-in pauses</span>
+            </div>
+            <div class="button-row">
+              <a class="btn btn--primary" href="#experience">Enter TopzLots.online</a>
+              <a class="btn btn--ghost" href="/responsible-play/">See our care standards</a>
+            </div>
+            <div class="hero__meta" aria-label="Tonight's lounge stats">
+              <div class="hero__meta-item">
+                <small>Rooms live</small>
+                <strong>14</strong>
+                <p>Each with its own host + vibe check.</p>
+              </div>
+              <div class="hero__meta-item">
+                <small>Check-ins</small>
+                <strong>3 daily</strong>
+                <p>Sunrise resets, sunset recaps, midnight breaths.</p>
+              </div>
+              <div class="hero__meta-item">
+                <small>House edge</small>
+                <strong>0%</strong>
+                <p>We celebrate pacing, not payouts.</p>
+              </div>
+            </div>
           </div>
-          <div class="hero__chips" aria-label="Quick stats">
-            <div class="hero__chip">
-              <small>Rooms</small>
-              <strong>14</strong>
-            </div>
-            <div class="hero__chip">
-              <small>Check-ins</small>
-              <strong>3 daily</strong>
-            </div>
-            <div class="hero__chip">
-              <small>House edge</small>
-              <strong>0%</strong>
+          <div class="hero__side">
+            <article class="hero__pulse">
+              <h3>Tonight’s Flow</h3>
+              <ul class="hero__timeline">
+                <li>
+                  <span>18:00</span>
+                  <p>Sunset vibe check + calm chat prompts.</p>
+                </li>
+                <li>
+                  <span>19:30</span>
+                  <p>Playlist drop from resident host Nova.</p>
+                </li>
+                <li>
+                  <span>21:00</span>
+                  <p>Mindful pause ritual, guided breathing, stretch.</p>
+                </li>
+                <li>
+                  <span>22:15</span>
+                  <p>Soft reset + responsible-play shout outs.</p>
+                </li>
+              </ul>
+            </article>
+            <div class="hero__tiles">
+              <article class="hero-tile">
+                <p class="hero-tile__eyebrow">Host on deck</p>
+                <h4>Nova Jade</h4>
+                <p>Answers every DM, cues breaks, and spins lofi vinyl between rooms.</p>
+              </article>
+              <article class="hero-tile">
+                <p class="hero-tile__eyebrow">Palette</p>
+                <h4>Magenta glow</h4>
+                <p>Aurora gradients, muted reels, and captions tuned for sleepy eyes.</p>
+              </article>
             </div>
           </div>
         </div>
