--- a/contact/index.html
+++ b/contact/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#ff5f9e">
+    <meta http-equiv=\"Cache-Control\" content=\"no-cache, no-store, must-revalidate\">
+  <meta http-equiv=\"Pragma\" content=\"no-cache\">
+  <meta http-equiv=\"Expires\" content=\"0\"><meta name="theme-color" content="#ff5f9e">
   <title>Contact TopzLots.online</title>
   <meta name="description" content="Reach the TopzLots.online team for support, accessibility requests, and legal questions.">
   <link rel="canonical" href="https://topzlots.online/contact/">
