--- a/accessibility/index.html
+++ b/accessibility/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#ff5f9e">
+    <meta http-equiv=\"Cache-Control\" content=\"no-cache, no-store, must-revalidate\">
+  <meta http-equiv=\"Pragma\" content=\"no-cache\">
+  <meta http-equiv=\"Expires\" content=\"0\"><meta name="theme-color" content="#ff5f9e">
   <title>Accessibility Statement | TopzLots.online</title>
   <meta name="description" content="Explore how TopzLots.online keeps the lounge accessible with WCAG 2.1 AA practices, predictable layouts, and quick human support.">
   <link rel="canonical" href="https://topzlots.online/accessibility/">
