--- a/community/index.html
+++ b/community/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#ff5f9e">
+    <meta http-equiv=\"Cache-Control\" content=\"no-cache, no-store, must-revalidate\">
+  <meta http-equiv=\"Pragma\" content=\"no-cache\">
+  <meta http-equiv=\"Expires\" content=\"0\"><meta name="theme-color" content="#ff5f9e">
   <title>Community | TopzLots.online</title>
   <meta name="description" content="Meet the TopzLots.online social casino community&mdash;nightly rituals, playlists, moderators, and the etiquette that keeps the neon lounge cozy.">
   <link rel="canonical" href="https://topzlots.online/community/">
