--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="Content-Language" content="en-US">
+    <meta http-equiv=\"Cache-Control\" content=\"no-cache, no-store, must-revalidate\">
+  <meta http-equiv=\"Pragma\" content=\"no-cache\">
+  <meta http-equiv=\"Expires\" content=\"0\"><meta http-equiv="Content-Language" content="en-US">
   <meta name="theme-color" content="#ff5f9e">
   <title>TopzLots.online | Neon Social Casino Nightcaps</title>
   <meta name="description" content="TopzLots.online is the neon social casino for mindful nightcaps&mdash;live hosts, crate-dug playlists, and zero-cash rituals that keep play bright and safe.">
