--- a/privacy/index.html
+++ b/privacy/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#ff5f9e">
+    <meta http-equiv=\"Cache-Control\" content=\"no-cache, no-store, must-revalidate\">
+  <meta http-equiv=\"Pragma\" content=\"no-cache\">
+  <meta http-equiv=\"Expires\" content=\"0\"><meta name="theme-color" content="#ff5f9e">
   <title>Privacy Policy | TopzLots.online</title>
   <meta name="description" content="Learn how TopzLots.online handles account data, analytics, and your privacy rights.">
   <link rel="canonical" href="https://topzlots.online/privacy/">
