--- a/index.html
+++ b/index.html
@@ -621,8 +621,9 @@
   <footer class="footer">
     <div class="shell footer__grid">
       <div>
-        <a class="brand" href="/" aria-label="TopzLots.online home">
-                  <div class='brand__logo' role='img' aria-label='TopzLots.online textured logo'>
+        <!-- Navigation anchor for quick scroll back to top -->
+      <a class="brand" href="/" aria-label="TopzLots.online home">
+                <div class='brand__logo' role='img' aria-label='TopzLots.online textured logo'>
           <span aria-hidden='true'>TopzLots.online</span>
         </div>
         </a>
