--- a/accessibility/index.html
+++ b/accessibility/index.html
@@ -22,7 +22,10 @@
   <link rel="stylesheet" href="/styles.css?v=3">
 </head>
 <body>
-  <a class="skip-link" href="#main-content">Skip to main content</a>
+  <div class='site-alert' role='alert'>
+    <p>TopzLots.online is a free-to-play social casino experience. No real-money gambling or prizes. 18+ only. Please play responsibly.</p>
+  </div>
+  <a class='skip-link' href='#main-content'>Skip to main content</a>
   <header class="site-header">
     <div class="shell header__inner">
 
