--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </header>
 
   <main id="main-content">
-    <section class="hero hero--simple" id="overview">
+    <section class='hero hero--simple' id='overview'>
       <div class="shell hero__simple">
         <div class="hero__layout">
           <div class="hero__intro">
@@ -85,6 +85,9 @@
             </div>
           </div>
           <div class="hero__side">
+            <div class="hero__game-embed" aria-label="Rise of Orpheus game">
+              <iframe src="/game/rise-of-orpheus.php" title="Rise of Orpheus social casino game" loading="lazy"></iframe>
+            </div>
             <article class="hero__pulse">
               <h3>Tonight’s Flow</h3>
               <ul class="hero__timeline">
